-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.1
-
None
-
-
8f9fa232a (dev), 7f0b6224b (6.4)
Some examples report "QRhi [...] going down with [...] unreleased resources that own native graphics objects. This is not nice." when closing the compositor. - This is indeed not nice. Examples are minimal-qml, custom-extension, overview-compositor, etc.
This might be solved in some compositors along the lines of:
Connections {
target: Application
function onAboutToQuit() {
shellSurfaces.clear();
}
}
| For Gerrit Dashboard: QTBUG-108767 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 447076,2 | Compositor_api: delete TexProvider properly | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 447166,2 | Compositor_api: delete TexProvider properly | 6.4 | qt/qtwayland | Status: MERGED | +2 | 0 |