Compositor_api: delete TexProvider properly

If a QuickItem used in a compositor has a texture provider,
it is not destroyed before deleting QRhi. It makes a warning
of unreleased resources.

Fixes: QTBUG-108767
Change-Id: Id86839f1de1ff4f374170627d9c1e02c4afb7301
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 8f9fa232ac72a5f0caf58e120f3825820423c4de)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>